--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "daisyui": "^4.12.2",
+    "nuxt-icon": "^0.6.10",
     "tailwindcss": "^3.4.3"
   }
 }
