--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
+    "theme-change": "^2.5.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
