🚀 New config and packages optimization

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "mood-tm",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,16 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@audius/sdk": "^4.1.0",
-    "@nuxt/image": "^1.7.0",
+    "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/harlem": "^1.3.1",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
-    "theme-change": "^2.5.0",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2",
-    "web3": "^4.9.0"
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "daisyui": "^4.12.2",
