--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/harlem": "^1.3.1",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "axios": "^1.7.2",
+    "cookie-universal-nuxt": "^2.2.2",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
