✨ New Search and Albums Fixed!

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "mood-tm",
+  "version": "0.3.3",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --host",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
