--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@audius/sdk": "^4.1.0",
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/harlem": "^1.3.1",
@@ -20,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "web3": "^4.9.0"
   },
   "devDependencies": {
     "daisyui": "^4.12.2",
