--- a/package.json
+++ b/package.json
@@ -1,30 +1,44 @@
 {
   "name": "mood-tm",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
   "dependencies": {
-    "@nuxtjs/device": "^3.1.1",
-    "@nuxtjs/google-fonts": "^3.2.0",
-    "@nuxtjs/harlem": "^1.3.1",
-    "@nuxtjs/tailwindcss": "^6.12.0",
-    "axios": "^1.7.2",
-    "cookie-universal-nuxt": "^2.2.2",
-    "jsonwebtoken": "^9.0.2",
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "daisyui": "^4.12.2",
-    "nuxt-icon": "^0.6.10",
-    "tailwindcss": "^3.4.3"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
